--- a/src/style.css
+++ b/src/style.css
@@ -108,7 +108,14 @@ p {
     box-shadow: var(--box-shadow);
     color: white;
 }
-
+.credit {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    padding-top: 10px;
+    font-family: monospace;
+    font-size: 20px;
+}
 @media (max-width: 600px) {
     h1 {
         font-size: 50px;
